# docs/swagger.yaml
@@ -26,6 +26,18 @@ definitions:
     required:
     - name
     type: object
+  main.CreateUserTokenPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+      username:
+        maxLength: 100
+        type: string
+    required:
+    - email
+    - username
+    type: object
   main.RegisterUserPayload:
     properties:
       email:
@@ -153,6 +165,37 @@ info:
   termsOfService: http://swagger.io/terms/
   title: ForSeer API
 paths:
+  /authentication/token:
+    post:
+      consumes:
+      - application/json
+      description: Creates a token for a user
+      parameters:
+      - description: User credentials
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.CreateUserTokenPayload'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Token
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Creates a token
+      tags:
+      - authentication
   /authentication/user:
     post:
       consumes:
